# daily-checkin

./: .env.example  .gitignore  README.md  SECURITY.md
sites/nodeseek/: .env.example  DEPLOY_QINGLONG.md  README.md  pyproject.toml  requirements.txt  run.py
sites/nodeseek/docs/: site-analysis.md  site-contract.json
sites/nodeseek/src/checkin/: auth.py  client.py  config.py  main.py  notifier.py  site_config.py
sites/nodeseek/tests/: helpers.py  run_offline.py  test_config.py  test_http.py  test_redaction.py
sites/nodeseek/tests/fixtures/: checkin-success.json
sites/novalpie/: .env.example  .gitignore  DEPLOY_QINGLONG.md  README.md  SECURITY.md  pyproject.toml
sites/novalpie/docs/: site-analysis.md
sites/novalpie/src/checkin/: auth.py  client.py  config.py  models.py  service.py  site_config.py
sites/novalpie/tests/: helpers.py  test_auth.py  test_checkin.py  test_config.py  test_http.py
sites/novalpie/tests/fixtures/: checkin-success.json  schema-changed.json  status-checked.json  status-unchecked.json
src/checkin/: __init__.py  logging_utils.py  service.py
tests/: __init__.py  helpers.py  test_checkin.py
tests/fixtures/: schema-changed.json  status-checked.json  status-unchecked.json
