[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "authorized-daily-checkin"
version = "0.1.0"
description = "A maintainable, environment-configured daily check-in automation baseline"
requires-python = ">=3.11"
dependencies = ["tzdata==2026.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
