[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novalpie-daily-checkin"
version = "0.1.0"
description = "Authorized NovalPie daily check-in automation for QingLong"
requires-python = ">=3.11"
dependencies = ["tzdata==2026.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
